<resources>
    <string name="app_name">HealthCare</string>
    <string name="open">opn</string>
    <string name="close">close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    //navigation
    <string name="menu_dashboard">Home</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_aboutUs">About Us</string>
    <string name="menu_signOut">Sign Out</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hint_enter_medicine">Type medicine or brand name</string>
    <string name="select_days">Select Days</string>
    <string name="remove_favourite">Remove from Favourite</string>
    <string name="patient_profile">Patient Profile</string>
    <string name="check_profile">Check Profile</string>
    <string name="send_a_message">Send a Message</string>
    <string name="doctor_name">Doctor Name</string>
    <string name="about_doctor">About Doctor</string>
    <string name="doctor_details">Doctor Details</string>
    <string name="request_for_check_test_results">Request for Check Test Results</string>
    <string name="profile">Profile</string>
    <string name="add_to_favourite">Add to Favourite</string>
    <string name="patient_name">Patient Name</string>
    <string name="patient_phone">Patient Phone</string>
    <string name="patient_details">Patient Details</string>
    <string name="type_a_message">Type a Message</string>
    <string name="messenger_name">Messenger Name</string>
    <string name="new_appointment">Add New</string>
    <string name="pending_appointments">Check Pending </string>
    <string name="wait">Wait....</string>
    <string name="search_here">Search here</string>
    <string name="want_to_remove_this_location">Want to remove this Location?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="finish">Finish</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="home_address">Home Address</string>
    <string name="add_new">ADD NEW</string>
    <string name="medical_council_reg_number">Medical Council Reg Number</string>
    <string name="search_doctor">Search doctor</string>
    <string name="available">Available</string>
    <string name="_9_00_10_00">9.00 - 10.00</string>
    <string name="download">Download</string>
    <string name="appointment_details">Appointment Information</string>
    <string name="cancel_appointment">Cancel Appointment</string>


</resources>
