<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_border">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="274dp"
            android:layout_height="153dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:fontFamily="@font/bungee"
            android:gravity="center"
            android:text="@string/want_to_remove_this_location"
            android:textColor="@color/colorBlack"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDeleteLoc"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_marginStart="25dp"
            android:fontFamily="@font/bungee"
            android:background="@drawable/rounded_border"
            android:text="@string/yes"
            android:textSize="22sp"
            android:padding="0dp"/>

        <Button
            android:id="@+id/btnCancelLoc"
            android:background="@drawable/custom_button"
            android:layout_width="111dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="25dp"
            android:fontFamily="@font/bungee"
            android:text="@string/no"
            android:textSize="22sp"
            android:textColor="@color/colorWhite"
            />


    </RelativeLayout>

</androidx.cardview.widget.CardView>